--- a/front_end/first file/mainpaige.css
+++ b/front_end/first file/mainpaige.css
@@ -1,4 +1,4 @@
-.weatherbutton {
+weatherbutton {
     background-color: white;
     padding: 10px;
     border: none;
@@ -24,12 +24,31 @@
     left: 50%;
     transform: translateX(-50%);
   }
-
+  
   .weather-buttons {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
     align-items: center;
     margin-bottom: 150px;
   }
+  
+  .weatherbutton {
+    margin: 0 40px;
+    left : 20%;
+  }
+  
+  .clothesroompage {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    transform: translate(20px, -20px);
+  }
+
+
+  #iframeContainer {
+    width: 100%;
+    height: 500px;
+  }
+
 
   
