옷장 표현, 메인알고리즘변경, 자잘한 부 오류 수정 ver2

--- a/front_end/css/main/mainpage.css
+++ b/front_end/css/main/mainpage.css
@@ -111,3 +111,14 @@ input[id="menuicon"]:checked + label + div {right:0;}
     display : none;
   }
 
+  label {
+    display: inline-block;
+    margin-right: 30px;
+  }
+
+  .weather-buttons {
+    display: flex;
+    justify-content: flex-end;
+    margin-left: 50px;
+  }
+  
