--- a/front_end/css/main/mainpage.css
+++ b/front_end/css/main/mainpage.css
@@ -66,16 +66,59 @@ input[id="menuicon"]:checked + label + div {right:0;}
 
 
 
-.weatherbutton {
-    background-color: white;
+  .weather-buttons {  
+    background-color: #2C3E50;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;    
+    margin-bottom: 150px;
+    margin-left: 50px;
+    height: 50px;
     padding: 10px;
-    border: none;
-    border-radius: 5px;
-    margin: 5px;
-    cursor: pointer;
-    margin-left: 80px;
   }
   
+  .weather-buttons input[type="radio"] {
+    display: none;
+  }
+  
+  .weather-buttons label {
+    margin: 0 10px;
+    padding: 10px 20px;
+    border-radius: 30px;
+    background-color: #eee;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+  }
+  
+  .weather-buttons label:hover {
+    background-color: #ccc;
+  }
+  
+  .weather-buttons input[type="radio"]:checked + label {
+    background-color: #2196f3;
+    color: #fff;
+  }
+  
+  #submitbutton {
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    padding: 10px 30px;
+    border-radius: 10px;
+    font-size: 14px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
+  
+  #submitbutton:hover {
+    background-color: #0062cc;
+  }
+  
+
+
+
+
   .active {
     background-color: palegoldenrod;
   }
@@ -93,14 +136,11 @@ input[id="menuicon"]:checked + label + div {right:0;}
     transform: translateX(-50%);
   }
   
-  .weather-buttons {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 150px;
-  }
 
   
+
+  
+  /* 옷장 css */
   .clothesroompage {
     position: absolute;
     bottom: 0;
@@ -111,18 +151,55 @@ input[id="menuicon"]:checked + label + div {right:0;}
   .clothesroom-button {
     display : none;
   }
+  /*전체 배경*/
+  .clothes{
+    background-color: #2C3E50;
+    padding: 10px;
+    border-radius: 5px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+  }
+  /*아우터, 상의, 하의 ,기타용품, 개인차 글씨 조정*/
+  .clothes span {
+    font-size: 1.2em;
+    font-weight: bold;
+    margin-bottom: 2px;
+    display: block;
+  }
+  /*옷장 아이콘*/
+  .clothes label {
+    display: inline-block;
+    width: 50px;
+    height: 50px;
+    text-align: center;
+    line-height: 50px;
+    background-color: #212F3C;
+    border-radius: 50%;
+    margin-right: 10px;
+    cursor: pointer;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+  }
+  /*radio의 버튼 없애기*/
+  .clothes input[type="radio"] {
+    display: none;
+  }
+  /*아이콘 클릭했을때*/
+  .clothes input[type="radio"]:checked + label {
+    background-color: #2196f3;
+    color: #006;
+  }
 
+  
+  
+  
   label {
     display: inline-block;
     margin-right: 30px;
   }
 
-  .weather-buttons {
-    display: flex;
-    justify-content: flex-end;
-    margin-left: 50px;
-  }
+
   
+
+
   #sidebar1{
     position:absolute;
     width: 30%;
