--- a/front_end/css/signup/new_main.css
+++ b/front_end/css/signup/new_main.css
@@ -3,7 +3,10 @@ html {
     height: 100%;
 }
 
-body {
+fieldset {border :0;}
+.skip {display: none;}
+
+main {
     margin: 0;
     height: 100%;
     background: #ffffff;
