--- a/front_end/css/signup/new_main.css
+++ b/front_end/css/signup/new_main.css
@@ -192,4 +192,5 @@ select {
 
 
 footer {
-    color: #333; text-align: center; font-size: 0.85rem; margin-top: 30px;}
+    color: #333; text-align: center; font-size: 0.85rem; margin-top: 30px;
+}
