--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -16,7 +16,7 @@
 
         <div id= "wrapper">
             <main>
-                <form action="#" method="post" id="content">
+                <form action="/signup" method="post" id="content">
                     <fieldset>
                         <legend class = "skip">회원가입 양식</legend>
                 <!-- 아이디 생성란(wheatherla 아이디로 ㅇㅇ) -->
@@ -25,7 +25,7 @@
                         <label for="id">아이디</label>
                     </h3>
                     <span class="box int_id">
-                        <input type="text" id="id" class="int" maxlength="20">
+                        <input type="text" id="id" class="int" name="userid" maxlength="20">
                         <span class="step_url">@weatherla.com</span>
                     </span>
                     <span class="error_next_box"></span>
@@ -35,10 +35,10 @@
                 <div>
                     <h3 class="join_title"><label for="pswd1">비밀번호</label></h3>
                     <span class="box int_pass">
-                        <input type="text" id="pswd1" class="int" maxlength="30">
+                        <input type="text" id="pswd1" class="int" name="password" maxlength="30">
                         <span id="alertTxt">사용불가</span>
 
-                        <img src="/img/m_icon_pass.png" id="pswd1_img1" class="pswdImg">
+                        <img src="/static/img/m_icon_pass.png" id="pswd1_img1" class="pswdImg">
 
                     </span>
                     <span class="error_next_box"></span>
@@ -50,7 +50,7 @@
                     <span class="box int_pass_check">
                         <input type="text" id="pswd2" class="int" maxlength="20">
 
-                        <img src="/img/m_icon_check_disable.png" id="pswd2_img1" class="pswdImg">
+                        <img src="/static/img/m_icon_check_disable.png" id="pswd2_img1" class="pswdImg">
 
                     </span>
                     <span class="error_next_box"></span>
@@ -60,51 +60,27 @@
                 <div>
                     <h3 class="join_title"><label for="name">이름</label></h3>
                     <span class="box int_name">
-                        <input type="text" id="name" class="int" maxlength="20">
+                        <input type="text" id="name" class="int" name="name" maxlength="20">
                     </span>
                     <span class="error_next_box"></span>
                 </div>
 
                 <!-- 생년월일 칸 -->
                 <div>
-                    <h3 class="join_title"><label for="yy">생년월일</label></h3>
+                    <h3 class="join_title"><label for="yyyymmdd">생년월일</label></h3>
 
                     <div id="bir_wrap">
                         <!-- 생년 -->
                         <div id="bir_yy">
                             <span class="box">
-                                <input type="text" id="yy" class="int" maxlength="4" placeholder="년(4자)">
+                                <input type="text" id="yyyymmdd" class="int" maxlength="10" placeholder="ex)19990531">
                             </span>
                         </div>
 
-                        <!-- 생년 월 -->
-                        <div id="bir_mm">
-                            <span class="box">
-                                <select id="mm" class="sel">
-                                    <option>월</option>
-                                    <option value="01">1</option>
-                                    <option value="02">2</option>
-                                    <option value="03">3</option>
-                                    <option value="04">4</option>
-                                    <option value="05">5</option>
-                                    <option value="06">6</option>
-                                    <option value="07">7</option>
-                                    <option value="08">8</option>
-                                    <option value="09">9</option>                                    
-                                    <option value="10">10</option>
-                                    <option value="11">11</option>
-                                    <option value="12">12</option>
-                                </select>
-                                
-                            </span>
-                        </div>
 
-                        <!-- 생년월일 -->
-                        <div id="bir_dd">
-                            <span class="box">
-                                <input type="text" id="dd" class="int" maxlength="2" placeholder="일">
-                            </span>
-                        </div>
+
+
+
 
                     </div>
                     <span class="error_next_box"></span>    
@@ -114,7 +90,7 @@
                 <div>
                     <h3 class="join_title"><label for="gender">성별</label></h3>
                     <span class="box gender_code">
-                        <select id="gender" class="sel">
+                        <select id="gender" name="gender" class="sel">
                             <option>성별</option>
                             <option value="M">남자</option>
                             <option value="F">여자</option>
@@ -127,7 +103,7 @@
                 <div>
                     <h3 class="join_title"><label for="email">본인인증 이메일<span class="optional">(필수)</span></label></h3>
                     <span class="box int_email">
-                        <input type="text" id="email" class="int" maxlength="100" placeholder="선택입력">
+                        <input type="text" id="email" class="int" name="email" maxlength="100" placeholder="선택입력">
                     </span>
                     <span class="error_next_box">이메일 주소를 다시 한번 확인해주시길 바랍니다.</span>    
                 </div>
@@ -136,7 +112,7 @@
                 <div>
                     <h3 class="join_title"><label for="mobile">전화번호</label></h3>
                     <span class="box int_mobile">
-                        <input type="tel" id="mobile" class="int" maxlength="16" placeholder="전화번호 입력">
+                        <input type="tel" id="mobile" class="int" name="phoneNum" maxlength="16" placeholder="전화번호 입력">
                     </span>
                     <span class="error_next_box"></span>    
                 </div>
