--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -12,7 +12,7 @@
 <body>
     <h1><a href="/"><img src="/img/logo_images.png" alt="WeaTherla"></a></h1>
     <main>
-        <form action="#" method="post" id="loginFrm">
+        <form action="/login" method="post" id="loginFrm">
             <fieldset>
                 <legend class = "skip">로그인양식</legend>
                 <ul>
