컨트롤러 메핑은 문제x 반환값문제

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -58,7 +58,7 @@
 
       <div class="weather-buttons">
        
-        <form action = "#" , id="day"> <!---오전 오후 저녁-->
+        <form action = "/home" , id="day"> <!---오전 오후 저녁-->
           <input type="radio" name="day" value="morning" id="morning">오전
           <label for="morning"> </label>
         
@@ -75,7 +75,7 @@
       <!-- 가운데 오전 오후 저녁 추가부  -->
     </div>
     
-    <form action = "", id="cloth"> 
+    <form action = "/home", id="cloth">
     <div class="yourclothes">
         <input type="text" name="cloth" id="yourouter" readonly>
         <input type="text" name="cloth" id="yourtop" readonly>
