--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -18,13 +18,13 @@
                 <ul>
                     <li>
                         <span class="id_bg"><!-- 배경이미지(메일아이디)--></span>
-                        <span><input type="text" name="user_id" placeholder="아이디(이메일)"></span>
+                        <span><input type="text" name="userid" placeholder="아이디(이메일)"></span>
 
                     </li>
                     <li class="error id_error">아이디(이메일)을 입력해주세요.</li>
                     <li>
                         <span class="pw_bg"><!-- 배경이미지(비밀번호)--></span>
-                        <span><input type="password" name="user_pw" placeholder="비밀번호"></span>
+                        <span><input type="password" name="password" placeholder="비밀번호"></span>
                         <span class="pw_show_hide" title="문자보이기"></span>
                     </li>
                     <li class="error pw_error">비밀번호를 입력해주세요</li>
