로그인 구현

--- a/src/main/resources/templates/mypage.html
+++ b/src/main/resources/templates/mypage.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="en" class="h-100">
 
@@ -82,10 +81,10 @@
       <input type="text" name="cloth" id="yourtop" readonly>
       <input type="text" name="cloth" id="yourbottom" readonly>
       <input type="text" name="cloth" id="youretc" readonly>
+    </div>
   </form>
   <!-- 실제 본인 설정한 옷 부 -->
-  </div>
-
+</div>
 
 
 
@@ -101,7 +100,7 @@
 
 
 
-<div class="clothesroompage" id="clothesroompage"> <!---이 부 부터는 기존 clothesroompage, 즉. 옷을 입히는 부 구현-->
+<div class="clothesroompage", id="clothesroompage"> <!---이 부 부터는 기존 clothesroompage, 즉. 옷을 입히는 부 구현-->
 
   <button type="button" class="clothesroompageopen" id="clothesroompageopen" onclick=""><img src="clothsbuttonimg.png"></button>
   <div class="clothesroom-button" , id="clothesroom-button">
@@ -186,9 +185,9 @@
 
 <!--토글 메뉴 css및 JS정리-->
 <title>toggle menu</title>
-<form action = "", id="sidebar1">
+<form action = "" id="sidebar1">
 
-  <div id="sidebar1" onclick="togglemenu()">
+  <div id="sidebar2" onclick="togglemenu()">
     <ul>
       <li>상세 정보</li>
       <li>시간대별</li>
