로그아웃구현

--- a/src/main/resources/templates/mypage.html
+++ b/src/main/resources/templates/mypage.html
@@ -177,7 +177,7 @@
   <span></span>
 </label>
 <div class="sidebar">
-  <form action="../main/index.html" method="get">
+  <form action="/logout" method="get">
     <button class="join_link" id="logout_btn" type="submit">로그아웃</button>
   </form>
 </div>
