--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -38,7 +38,7 @@
                         <input type="text" id="pswd1" class="int" name="password" maxlength="30">
                         <span id="alertTxt">사용불가</span>
 
-                        <img src="/static/img/m_icon_pass.png" id="pswd1_img1" class="pswdImg">
+                        <img src="/img/m_icon_pass.png" id="pswd1_img1" class="pswdImg">
 
                     </span>
                     <span class="error_next_box"></span>
@@ -50,7 +50,7 @@
                     <span class="box int_pass_check">
                         <input type="text" id="pswd2" class="int" maxlength="20">
 
-                        <img src="/static/img/m_icon_check_disable.png" id="pswd2_img1" class="pswdImg">
+                        <img src="/img/m_icon_check_disable.png" id="pswd2_img1" class="pswdImg">
 
                     </span>
                     <span class="error_next_box"></span>
@@ -73,7 +73,7 @@
                         <!-- 생년 -->
                         <div id="bir_yy">
                             <span class="box">
-                                <input type="text" id="yyyymmdd" class="int" maxlength="10" placeholder="ex)19990531">
+                                <input type="text" id="yyyymmdd" class="int"name="birth" maxlength="10" placeholder="ex)19990531">
                             </span>
                         </div>
 
