--- a/src/main/resources/templates/mypage.html
+++ b/src/main/resources/templates/mypage.html
@@ -82,9 +82,10 @@
       <input type="text" name="cloth" id="yourtop" readonly>
       <input type="text" name="cloth" id="yourbottom" readonly>
       <input type="text" name="cloth" id="youretc" readonly>
+    </div>
   </form>
   <!-- 실제 본인 설정한 옷 부 -->
-  </div>
+
 
 
 
@@ -103,7 +104,7 @@
 
 <div class="clothesroompage" id="clothesroompage"> <!---이 부 부터는 기존 clothesroompage, 즉. 옷을 입히는 부 구현-->
 
-  <button type="button" class="clothesroompageopen" id="clothesroompageopen" onclick=""><img src="clothsbuttonimg.png"></button>
+  <button type="button" class="clothesroompageopen" id="clothesroompageopen" onclick=""><img src="/img/clothsbuttonimg.png"></button>
   <div class="clothesroom-button" , id="clothesroom-button">
 
     <!---실제 옷장 .-->
@@ -178,9 +179,8 @@
   <span></span>
 </label>
 <div class="sidebar">
-  <form action="../main/index.html" method="get">
-    <button class="join_link" id="logout_btn" type="submit">로그아웃</button>
-  </form>
+  <button type="submit" class="join_link" id="log_btn" onclick="location.href='/'">로그아웃</button>
+
 </div>
 
 
@@ -188,7 +188,7 @@
 <title>toggle menu</title>
 <form action = "", id="sidebar1">
 
-  <div id="sidebar1" onclick="togglemenu()">
+  <div id="sidebar2" onclick="togglemenu()">
     <ul>
       <li>상세 정보</li>
       <li>시간대별</li>
@@ -198,7 +198,7 @@
     </div>
   </div>
 
-  <script src="../../js/main/mainpage.js">
+  <script src="/js/main/mainpage.js">
 
   </script>
 </form>
