--- a/src/main/resources/templates/mypage.html
+++ b/src/main/resources/templates/mypage.html
@@ -102,7 +102,7 @@
 
 <div class="clothesroompage", id="clothesroompage"> <!---이 부 부터는 기존 clothesroompage, 즉. 옷을 입히는 부 구현-->
 
-  <button type="button" class="clothesroompageopen" id="clothesroompageopen" onclick=""><img src="clothsbuttonimg.png"></button>
+  <button type="button" class="clothesroompageopen" id="clothesroompageopen" onclick=""><img src="/img/clothsbuttonimg.png"></button>
   <div class="clothesroom-button" , id="clothesroom-button">
 
     <!---실제 옷장 .-->
