--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -73,7 +73,7 @@
                         <!-- 생년 -->
                         <div id="bir_yy">
                             <span class="box">
-                                <input type="text" id="yyyymmdd" class="int" maxlength="10" placeholder="ex)19990531">
+                                <input type="text" id="yyyymmdd" class="int" name="birth" maxlength="10" placeholder="ex)19990531">
                             </span>
                         </div>
 
